--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
         <version>4.1.2</version>
       </dependency>
 
+<!--      CSV reader-->
+      <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>5.3</version>
+      </dependency>
+
       <!-- Logging with SLF4J & LogBack -->
       <dependency>
         <groupId>org.slf4j</groupId>
